﻿v1.2.2

Colors
* New: Added Pink to the list of available colors for Alerts, Timers, Text and Mechanic Spies.
* New: Added Dark Grey to the list of available colors for Alerts, Timers, Text and Mechanic Spies.
* Change: Purple is now... more purple.

Chat Output
* New: Chat Objects have been added to KBM. These are created and managed in the same way as Alerts, Timers and Mechanic Spies.
* New: Newly created and converted Chat Object will have various settings, so they can be individually enabled/disabled.
* New: Chat Objects have a Color option, this is not yet available, but once available all settings will be automatically applied.
* Note: This system will be expanded upon, and will include options in the global menu to assign which Tabs KBM output can display to.
* Note: Once the Chat Tab options are available, custom and default colors already defined will be applied.

Rez Master
* New: If the Unit cache does not have an entry yet for the player in question, KBM will temporarily assign one.
* Fixed: Another possible unassigned Unit Cache nil entry. (This is possibly a Warfront/Conquest related issue)

Infernal Dawn
* Rusila
** Change: Longshot chat outputs are now assigned to Chat Objects and can be enabled/disabled individually.
* Maelforge Final
** Change: Separated both versions of Hellfire when displayed in the Mechanic Spy. These are now color coded based on the in-game bubble.

Primeval Feast
* Alltha the Reaper
** New: Added personal alert for Toxic Spores
** New: Added a 6 minute enrage timer.

River of Souls
* Dark Foci
** Change: Attempt to stop these from triggering after the encounter has ended.

Greenscale's Blight
* Oracle Aleria
** Change: Adjusted the Boss object records for the initial Werewolves to use new ID based storage and trigger.

Translations
* Russian Updated.
* French Updated.
* German Updated.

----
v1.2.1

Infernal Dawn
* Rusila
** Fixed: Stopped spam from when the Left Longshot enters the battle.
* Laethys